--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,13 @@
             <input type="checkbox" name="consent">
             <input type="Submit"  value="Submit"/>
         </fieldset>
+        <p>{{error}}</p>
     </form>
+    <br>
+    <form action="/uploader/" method= "POST" enctype= "multipart/form-data">
+        <input type="file" name="file"/>
+        <input type="submit" value="submit">
+    </form>
+    <p>{{Status}}</p>
 </body>
 </html>
